<resources>
    <string name="app_name">Рудай Наталья</string>
    <string name="profile_phone_hint">Мобильный</string>
    <string name="profile_user_phone">+7(123)1231212</string>
    <string name="profile_email_hint">E-mail</string>
    <string name="profile_user_email">123@gmail.com</string>
    <string name="profile_user_vk">vk.com/id123123</string>
    <string name="profile_vk_hint">Профиль в VK</string>
    <string name="profile_gitHub_hint">Репозиторий</string>
    <string name="profile_user_gitHub">github.com/Example/ExampleRepo</string>
    <string name="profile_user_about">Какая-то краткая никому неинтересня информация</string>
    <string name="profile_user_about_hint">О себе</string>
    <string name="scoreBox_ratingText">Рейтинг</string>
    <string name="scoreBox_ratingCount">-</string>
    <string name="scoreBox_codeCount">555</string>
    <string name="scoreBox_codeText">Написано строк кода</string>
    <string name="scoreBox_projectsCount">1</string>
    <string name="scoreBox_projectsText">Проектов</string>
    <string name="menu_myProfile_txt">Профиль</string>
    <string name="menu_myTeam_txt">Команда</string>
    <string name="menu_myContacts_txt">Контакты</string>
    <string name="menu_myTasks_txt">Задачи</string>
    <string name="menu_myNotifications_txt">Уведомления</string>
    <string name="menu_myBookmarks_txt">Закладки</string>
</resources>
